Image slider, dark mode, bug fixed

--- a/BLOG/style.css
+++ b/BLOG/style.css
@@ -21,12 +21,12 @@ header h1{
 	margin-left: 2%;
 	margin-bottom: 40%;
 	color: #fff;
-	font-size: 40px;
+	font-size: 7vh;
 }
 header p{
 	position: absolute;
 	color: #fff;
-	font-size: 50px;	
+	font-size: 6.5vh;	
 	display:flex;
 	float: left;
 	width: 40%;
@@ -38,14 +38,13 @@ header ul{
 	width: auto;
 	float: right;
 	margin-right: 0;
-    margin-top: 10%;
+   /* margin-top: 10%;*/
 	margin-bottom: 70%;
-	margin-top: 15%;
+	margin-top: 20%;
 }
 header li{
 	display: inline-block;
-	padding: 15px 20px;
-
+	padding: 3vh 15px 5vh ;
 }
 header a {
 	text-align: center;
@@ -58,7 +57,33 @@ header a:hover{
 	color: #ffb700;
 	transition: 0.5s;
 }
-
+input[name="mode"]{
+	position: fixed;
+	cursor: pointer;
+	width: auto;
+	background: none;
+	border: none;
+	top: 0;
+	right: 15px;
+	z-index: 1;
+	-webkit-appearance: none;
+}
+input[name="mode"]:checked ~ *{
+	filter: invert(1);
+}
+input[name="mode"]:before{
+	content: "Dark";
+	width: auto;
+	color: #fff;
+	background-color: #000;
+	padding: 10px 20px;
+}
+input[name="mode"]:checked:before{
+	content: "Light";
+	color: #000;
+	background-color: #fff;
+	padding:10px 20px;
+}
 body{
 	font-family: "Handlee", cursive;
 	font-size: 15pt;
@@ -87,19 +112,6 @@ padding: 15px;
 margin: 0;
 border-radius: 10px;
 }
-/*#header{
-	background-image: url("img.jpeg");
-	background-size: cover;
-	
-}
-#header p{
-	margin: 0;
-	padding-top: 7 px;
-	text-align: center;
-	color: #49eb34;
-	font-size: 30pt;
-	font-weight: bold;
-}*/
 #aboutMe p{
 	margin: 0;
 	padding-top: 5pt;
@@ -111,7 +123,6 @@ border-radius: 10px;
 	text-align: right;;
 	font-size: 40px;
 	color: #000000;
-
 }
 li{
 	margin-bottom: 10pt;
@@ -156,18 +167,86 @@ table, th, td{
 	color: black;
 	background-color: #00b0e6;
 }
+
+.slidershow{
+	filter: inherit;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	position: absolute;
+	right: 50%;
+	transform: translateX(-50%);
+}
+.middle{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%;-50%);
+}
+.navigation{
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+}
+.bar{
+width: 50px;
+height: 10px;
+border: 2px solid #fff;
+margin: 6px;
+cursor: pointer;
+transition: 0.4s;
+}
+.bar:hover{
+	background: #fff;
+}
+input[name="r"]{
+	position: absolute;
+	visibility: hidden;
+}
+.slides{
+	width: 500%;
+	height: 100%;
+	display: flex;
+}
+.slide{
+	width: 20%;
+	transition: 0.6s;
+}
+.slide img{
+	width: 100%;
+	height: 100%;
+}
+#r1:checked ~ .s1{
+	margin-left: 0;
+}
+#r2:checked ~ .s1{
+	margin-left: -20%;
+}
+#r3:checked ~ .s1{
+	margin-left: -40%;
+}
+#r4:checked ~ .s1{
+	margin-left: -60%;
+}
+#r5:checked ~ .s1{
+	margin-left: -80%;
+}
 iframe, audio{
+	filter: inherit;
 	display: block;
 	margin: 0 auto;
 	border: 3px; solid: #3fb6b2;
 }
 form{
+
 	text-align: center;
 	margin-top: 10px;
 }
  .submit{
 	background-color: #fff;
-	color: #ffb700;
+	color: #000;
 	padding: 13pt 40pt;
 	border-radius: 7px;
 	font-weight: bold;
@@ -200,6 +279,9 @@ input, textarea{
 	margin-bottom: auto;
 	margin-top: auto;
 }
+#contacts a{
+	filter: inherit;
+}
 #contacts img:hover{
 	opacity: 0.8;
 }
@@ -222,6 +304,7 @@ color: #808080;
 }
 
 #left{
+filter: inherit;
 display: flex;
 float: left;
 
@@ -231,7 +314,73 @@ display: flex;
 float: right;
 }
 #snakee{
+	filter: inherit;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.AboutME{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 300px;
+	overflow: hidden;
+}
+.containerer{
+	position: relative;
+	min-width: 100%;
+	min-height: 300px;
+	padding: 20px;
+	color: #555;
+}
+.containerer .content{
+	display: none;
+	margin-top: 20px;
+}
+.containerer .content.contentEnglish{
+	display: block;
+}
+.check{
+	position: relative;
+	width: 50px;
+}
+.check:before{
+	content: "";
+	position: absolute;
+	width: 50px;
+	height: 25px;
+	background: #333;
+	border-radius: 25px;
+}
+.check:checked:before{
+	background: #00a1ff;
+}
+.check:after{
+	content: "";
+	position: absolute;
+	left: 0;
+	width: 25px;
+	height: 25px;
+	background: #fff;
+	border-radius: 25px;
+	transition: 0.25s;
+	border: 2px solid #333;
+	box-sizing: border-box;
+}
+.check:checked:after{
+	left: 25px;
+	border: 2px solid #00a1ff;
+}
+.check:checked ~ .content.contentEnglish{
+	display: none;
+}
+.check:checked ~ .content.contentRussian{
+	display: block;
+}
+.en{
+	color: #000;
+}
+.ru{
+	color: #000;
 }
